# zephyr

./: west.yml
boards/arm/nucleo_h723zg/: nucleo_h723zg.dts  nucleo_h723zg.yaml
drivers/can/: can_stm32fd.c
dts/arm/st/h7/: stm32h723.dtsi  stm32h723Xg.dtsi
samples/drivers/can2uart/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/drivers/can2uart/boards/: nucleo_f303re.overlay
samples/drivers/can2uart/include/: can_module.h  uart_module.h
samples/drivers/can2uart/src/: can_module.c  main.c  uart_module.c
samples/net/civetweb/common/src/: libc_extensions.c
